--- a/frontend/src/Pages/SettingsPage/Settings.css
+++ b/frontend/src/Pages/SettingsPage/Settings.css
@@ -6,13 +6,13 @@
     text-rendering: optimizeLegibility;
 }
 .settings-body{
-    border: 4px solid green;
     background-color: #1B1F2D;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 .Settings-container{
-    border: 3px solid purple;
     width: 100%;
     height: 100%;
     display: flex;
@@ -192,6 +192,27 @@
     height: 2.8em;
     border-radius: 7px;
     width: 7em;
+}
+
+
+@media (min-width:768px) {
+    .back-button{
+        display: none;
+    }
+
+    .settings-body{
+        background-color: #1B1F2D;
+        min-width: 350px;
+        max-width: 500px;
+        width: 50%;
+        height: 400px;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+    }
+    .Settings-container{
+        border-radius: 20px;
+    }
 }
 
 
