--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -160,7 +160,7 @@
     border-radius: 10px;
     margin-bottom: 15px;
     background-color: #E0DEDE;
-    color: #fff;
+    color: black;
 }
         
 .modal-content button {
@@ -322,4 +322,26 @@
         background-color: rgba(0, 0, 0, 0.2); /* Adds hover effect */
         border-radius: 10px;
       }
+      .modal-screen-larger{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+    .modal-content-screen{
+        background-color: #1B1F2D;
+        border: 1px solid #ffd700;
+        padding: 20px;
+        border-radius: 10px;
+        width: 400px;
+        height: 450px;
+        text-align: center;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    }
 }
