--- a/frontend/src/Pages/SettingsPage/Settings.css
+++ b/frontend/src/Pages/SettingsPage/Settings.css
@@ -213,6 +213,28 @@
     .Settings-container{
         border-radius: 20px;
     }
+    .modal-Mdev-larger{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+    .modal-content-Mdev{
+        background-color: #1B1F2D;
+        border: 1px solid #ffd700;
+        padding: 20px;
+        border-radius: 10px;
+        width: 400px;
+        height: 450px;
+        text-align: center;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    }
 }
 
 
