--- a/frontend/src/Pages/SettingsPage/Settings.css
+++ b/frontend/src/Pages/SettingsPage/Settings.css
@@ -225,16 +225,33 @@
         align-items: center;
         z-index: 1000;
     }
-    .modal-content-Mdev{
+    .modal-Mdev-larger {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center; /* Horizontal center */
+    align-items: center;   /* Vertical center */
+    z-index: 1000;
+}
+
+    .modal-content-Mdev {
         background-color: #1B1F2D;
         border: 1px solid #ffd700;
         padding: 20px;
         border-radius: 10px;
-        width: 400px;
-        height: 450px;
+        width: clamp(300px, 90%, 400px); /* Responsive width */
+        max-height: 90%; /* Prevent overflow */
         text-align: center;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
+
 }
 
 
