--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -5,17 +5,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 4px solid green;
     height: 100vh;
     width: 100vw;
 }
 .mapbox-container{
-    border: 4px solid salmon;
     height: 65%;
     width: 100%;
 }
 .device-container{
-    border: 4px solid skyblue;
     height: 35%;
     width: 100%;
 }
@@ -60,10 +57,10 @@
     border-radius: 8px;
     padding: 10px;
     margin-right: 10px;
-    min-width: 240px; /* Reduce min-width to fit more cards in smaller screen */
+    min-width: 270px; /* Reduce min-width to fit more cards in smaller screen */
+    max-width: 200px;
     min-height: 120px;
     height: 100%;
-    max-width: 200px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -188,7 +185,28 @@
 .monitor-title{
     display: none;
 }
-
+@media (min-width: 320px) {
+    .device-card {
+        background-color: #1B1F2D;
+        border-radius: 8px;
+        padding: 10px;
+        margin-right: 10px;
+        min-width: 290px; /* Reduce min-width to fit more cards in smaller screen */
+        max-width: 200px;
+        min-height: 120px;
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        scroll-snap-align: center;
+        box-sizing: border-box;
+        gap: 1em;
+        font-size: 13px;
+    }
+    
+}
 /*RESPONSIVE CSS*/
 @media (min-width: 768px) {
     .navbar-container:hover .icon-text {
