--- a/frontend/src/Pages/WelcomePage/Welcomepage.css
+++ b/frontend/src/Pages/WelcomePage/Welcomepage.css
@@ -16,7 +16,8 @@
 }
 
 .container {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     max-width: 400px;
     text-align: center;
     padding: 20px;
@@ -98,18 +99,20 @@
 }
 
 .trackicon {
-    position: absolute;
-    width: 10%; /* Default width */
-    top: 8rem;
+    position: relative;
+    width: auto; /* Default width */
+    height: auto;
 }
 
 
 
+
 /* Mobile responsiveness */
-@media (max-width:320px) {
+@media (max-width:325px) {
 
     .container {
-        width: 100%;
+        width: 100vw;
+        height: 100vh;
         max-width: 100%;
         text-align: center;
         padding: 4px;
@@ -117,7 +120,7 @@
     }
 
     .welcomepageheader h1 {
-        font-size: 1rem;
+        font-size: 0.5rem;
         margin-bottom: 0.5rem;
         margin-top: 3rem;
     }
@@ -155,7 +158,7 @@
 
     
 }
-@media  (max-width: 500px) {
+@media (max-width: 500px) {
     .default-body {
         background-color: #1A1B28;
         
@@ -210,17 +213,22 @@
 /* Desktop responsiveness */
 @media (min-width: 501px) and (max-width: 900px) {
     .container {
-        width: 100%;
+        position: relative;
+        height: 30rem;
+        width: 50rem;
+        max-height: 50rem;
         max-width: 50rem;
         background-color: #1A1B28;
-        margin: 10rem;
+       
     }
 
    .desktop-container{
         display: flex;
         flex-direction:row-reverse;
         width: 100%;
+        height: 100%;
         padding: 1rem;
+        position: absolute;
    }
 
    .welcomepageheader{
@@ -249,9 +257,10 @@
     }
 
     .image-container .motorbg {
-        width: 60%;
-        margin: 0px 80px 0px 0px;
-        bottom: 10px;
+        width: 80%;
+        margin: 0px 70px 0px 0px;
+        bottom: 4rem;
+        left: 3rem;
     }
     
     .trackicon{
@@ -259,13 +268,15 @@
     }
 
     .image-container .bike {
-        width: 60%;
+        width: 75%;
+        left: 1rem;
     }
 
     .image-container .location {
         width: 25%;
         height: 25%;
         left: 2rem;
+        bottom: 21rem;
     }
 
     .start-button-mobile {
@@ -284,19 +295,24 @@
         display: none;
     }
 }
-    @media (min-width: 901px) {
+    @media (min-width: 901px) and (max-width: 1024px) {
     .container {
-        width: 100%;
+        width: 50rem;
+        height: 50rem;
         max-width: 50rem;
+        max-height: 30rem;
+        padding: 1rem;
         background-color: #1A1B28;
-        margin: 10rem;
+        position: relative;
     }
 
    .desktop-container{
         display: flex;
         flex-direction:row-reverse;
         width: 100%;
-        padding: 1rem;
+        height: 100%;
+        padding: 2rem;
+        position: absolute;
    }
 
    .welcomepageheader{
@@ -325,25 +341,27 @@
     }
 
     .image-container .motorbg {
-        width: 60%;
-        margin: 0px 80px 0px 0px;
-        bottom: 10px;
+        width: 80%;
+        position: absolute;
+        bottom: 3rem;
     }
     
-    .trackicon{
+    .desktop-container .trackicon{
         position: absolute;
-        width: 11%;
-        top:10rem;
+        width: 17%;
+        bottom: 28rem;
+     
     }
 
     .image-container .bike {
-        width: 60%;
+        width:80%;
     }
 
     .image-container .location {
         width: 25%;
         height: 25%;
-        left: 2rem;
+        left: 1rem;
+        bottom: 20rem;
     }
 
     .start-button-mobile {
@@ -372,4 +390,198 @@
 
 }
 
+@media (min-width: 1025px) and (max-width: 1550px) {
+    .container {
+        width: 50rem;
+        height: 30rem;
+        max-width: 50rem;
+        max-height:50rem;
+        background-color: #1A1B28;
+        position: relative;
+    }
+
+   .desktop-container{
+        position: absolute;
+        display: flex;
+        flex-direction:row-reverse;
+        width: 100%;
+        padding: 1rem;
+   }
+
+   .welcomepageheader{
+       margin: 80px 20px 0 20px;
+       width: 80%;
+
+   }
+
+    .welcomepageheader h1 {
+        font-size: 1.8rem;
+        margin-bottom: 0.5rem;
+    
+    }
+
+    .trackmoto-text{
+        color:#FFC300;
+        display: inline;
+    }
+
+    .welcomepageheader p {
+        font-size: 0.9rem;
+    }
+
+    .image-container {
+        margin: 50px 0 10px 0;
+        width: 70%;
+    }
+
+    .image-container .motorbg {
+        width: 80%;
+    }
+
+    .image-container .bike {
+        width:80%;
+    }
+
+    .image-container .location {
+        width: 25%;
+        height: 25%;
+        left: 1rem;
+        bottom: 18rem;
+    }
+
+    .start-button-mobile {
+        display: none;
+    }
+
+    .start-button-desktop{
+        width: 70%;
+        padding: 10px;
+        margin: 20px;
+        font-size: 1rem;
+        border-radius: 0px;
+    }
+
+    .Login-button, .SignUp-button{
+        display: none;
+    }
+
+    .Login-button-desktop, .SignUp-button-desktop{
+        width: 70%;
+        padding: 10px;
+        margin: 20px;
+        font-size: 1rem;
+        border-radius: 0px;
+    }
+
+    .trackicon{
+        position: absolute;
+        width: 20%;
+        bottom: 25.5rem;
+        left: 44rem;
+        
+    }
+}
+
+@media (min-width: 1551px) and (max-width: 2560px) {
+
+    .container {
+        width: 90rem;
+        height: 60rem;
+        max-width: 90rem;
+        max-height:60rem;
+        background-color: #1A1B28;
+        position: relative;
+    }
+
+   .desktop-container{
+        position: absolute;
+        display: flex;
+        flex-direction:row-reverse;
+        width: 100%;
+        height: 93%;
+        padding: 2rem;
+   }
+
+   .welcomepageheader{
+       position: relative;
+       margin: 80px 20px 0 20px;
+       width: 80%;
+       top: 5rem;
+      
+   }
+
+    .welcomepageheader h1 {
+        font-size: 3.5rem;
+        margin-bottom: 1.8rem;
+    
+    }
+
+    .trackmoto-text{
+        color:#FFC300;
+        display: inline;
+    }
+
+    .welcomepageheader p {
+        font-size: 1.8rem;
+        margin-bottom: 1.8rem;
+    }
+
+    .image-container {
+        margin: 50px 0 10px 0;
+        width: 70%;
+    }
+
+    .image-container .motorbg {
+        width: 90%;
+        height: auto;
+    
+    }
+
+    .image-container .bike {
+        width:90%;
+        top: 4rem;
+    }
+
+    .image-container .location {
+        width: 25%;
+        height: 25%;
+        left: 1rem;
+        bottom: 36rem;
+    }
+
+    .start-button-mobile {
+        display: none;
+    }
+
+    .start-button-desktop{
+        width: 77%;
+        padding: 10px;
+        margin: 20px;
+        font-size: 2rem;
+        border-radius: 0px;
+        top: 10rem;
+        position: relative;
+    }
+
+    .Login-button, .SignUp-button{
+        display: none;
+    }
+
+    .Login-button-desktop, .SignUp-button-desktop{
+        width: 70%;
+        padding: 10px;
+        margin: 20px;
+        font-size: 2rem;
+        border-radius: 0px;
+        margin-bottom: 3rem;
+    }
+    .trackicon{
+        position: absolute;
+        width: 40%;
+        bottom: 54rem;
+        left: 37rem;
+        
+    }
+    
+}
 
