added responsiveness  on sign up page up to 2560px

--- a/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
+++ b/frontend/src/Pages/LoginSignUpPage/LoginSignup.css
@@ -7,15 +7,6 @@
         box-sizing: border-box;
         }
     
-        .signup-body, .login-body {
-            align-items: center;
-            justify-content: center;
-            font-family:Arial, sans-serif;
-            background-color: #fbbf24;
-            height: 100vh;
-            width: 100%;
-        }
-    
         .login-main-container, .signup-main-container {
             text-align: center;
             width: 100vw;
@@ -23,7 +14,6 @@
             background-color: #fbbf24 ;
         }
     
-        /* Container styling */
         .SignUp-container{
             width: 100%;
             padding: 40px;
@@ -31,18 +21,18 @@
             border-radius: 40px;
             color: #fdfdfd;
             position: relative;
-            height: 90vh;  
+            height: 94vh;  
         }
     
         .Login-container{
-        width: 100%;
-        padding: 60px;
-        background-color: #17191f;
-        border-radius: 40px;
-        color: #fdfdfd;
-        position: relative;
-        height: 90vh;  
-        top: 2rem;
+            width: 100%;
+            padding: 60px;
+            background-color: #17191f;
+            border-radius: 40px;
+            color: #fdfdfd;
+            position: relative;
+            height: 90vh;  
+            top: 2rem;
         }
     
         .signupheader, .loginheader {
@@ -54,8 +44,7 @@
             top: 2rem;
         
         }
-    
-    
+        
         .headersignup, .headerlogin{
             font-size: 30px;
             font-weight: bold;
@@ -144,7 +133,7 @@
             font-size: 23px;
         }
     
-        .login-desktop-container{
+        .login-desktop-container, .signUp-desktop-container{
             width: 100vw;
             height: 100vh;
             position: relative;
@@ -156,7 +145,13 @@
             width: 40%;
             bottom: 54rem;
             left: 34rem;
-    
+        }
+
+        .SignUp-desktop-main-container .trackiconlogin {
+            position: absolute;
+            width: 40%;
+            bottom: 54rem;
+            left: 34rem;
         }
     
         .trackiconlogin {
@@ -172,18 +167,39 @@
             top: 20rem;
             right: 15rem;
         }
+
+        .signup-desktop-container .trackiconloginleft{
+            position: absolute;
+            width: 70%;
+            transform: scaleX(-1);
+            top: 20rem;
+            right: 15rem;
+        }
+
+        .Login-txt h1, .SignUp-txt h1{
+            position: absolute;
+            text-align: center;
+            display: flex;
+            align-items: center;
+        }
+        
+        .button-back-txt, .button-back-signup-txt{
+            display: flex;
+            position: relative;
+            gap: 20px;
+        }
     
       
         @media (min-width: 320px) and (max-width: 424px){
-            .login-welcome-page{
+            .login-welcome-page, .signup-welcome-page{
                 display: none;
             }
-            .login-desktop-container{
+            .login-desktop-container, .signup-desktop-container{
                 display: none;
             }
     
             .SignUp-container{
-                padding:30px;
+                padding:42px;
             }
     
             .signup-form, .Login-form{
@@ -213,11 +229,11 @@
         }
     
         @media (min-width: 425px) and (max-width: 767px){
-            .login-welcome-page{
+            .login-welcome-page, .signup-welcome-page{
                 display: none;
             }
     
-            .login-desktop-container{
+            .login-desktop-container, .signup-desktop-container{
                 display: none;
             }
     
@@ -234,58 +250,115 @@
             }
     
             
-        .input-field {
-            width: 100%;
-            padding: 10px;
-            font-size: 16px;
-            border: none;
-            border-radius: 8px;
-            background-color: #2c2e38;
-            color: #fdfdfd;
-            outline: none;
-        }
-    
-        .login-desktop-container .trackiconloginleft{
-            display: none;
-        }
-    
+            .input-field {
+                width: 100%;
+                padding: 10px;
+                font-size: 16px;
+                border: none;
+                border-radius: 8px;
+                background-color: #2c2e38;
+                color: #fdfdfd;
+                outline: none;
+            }
+        
+            .login-desktop-container .trackiconloginleft{
+                display: none;
+            }
+        
         }
     
         @media(min-width: 768px) and (max-width: 1023px) {
     
-        .login-desktop-container{
-            background-color: #17191f;
-            display: flex;
-            padding: 1rem;
-            justify-content:space-between;
+
+            .login-desktop-container, .signup-desktop-container{
+                background-color: #17191f;
+                display: flex;
+                padding: 1rem;
+                justify-content:space-between;
+                position: relative;
+                width: 50rem;
+                height: 30rem;
+                max-width: 70rem;
+                max-height:70rem;
+            } 
+
+            /**.signup-desktop-container{
+                background-color: #17191f;
+                display: flex;
+                padding: 1rem;
+                justify-content:space-between;
+                position: relative;
+                width: 50rem;
+                height: 30rem;
+                max-width: 70rem;
+                max-height:70rem;
+                top: 5rem;
+            }*/
+            .signup-form .input-field{                          
+                width: 100%;
+                padding: 8px;
+                font-size: 16px;
+                border: none;
+                border-radius: 8px;
+                background-color: #2c2e38;
+                color: #fdfdfd;
+                outline: none;                                    
+               
+            }
+            
+            .Login-desktop-main-container{
+            max-width: 50rem;
+            width: 40%;
             position: relative;
-            width: 50rem;
-            height: 30rem;
-            max-width: 70rem;
-            max-height:70rem;
-        } 
-    
-        .Login-desktop-main-container{
-        max-width: 50rem;
-        width: 40%;
-        position: relative;
-        }
-    
-        .Login-form-desktop{
-            display: flex;
+            }
+
+            .SignUp-desktop-main-container{
+            max-width: 50rem;
+            width: 42%;
             position: relative;
-            flex-direction: column;
-            gap: 30px;
-            padding: 4px;
-            top: 7rem;
-            width: 17rem;
-        }
-    
+            }
+
+            /**.SignUp-desktop-main-container{
+                max-width: 50rem;
+                width: 40%;
+                position: relative;
+                bottom: 4rem;    
+            }*/
+        
+            .Login-form-desktop{
+                display: flex;
+                position: relative;
+                flex-direction: column;
+                gap: 30px;
+                padding: 4px;
+                top: 7rem;
+                width: 17rem;
+            }
+
+
+        .SignUp-form-desktop{
+                display: flex;
+                position: relative;
+                flex-direction: column;
+                gap: 30px;
+                padding: 1px;
+                top: 3em;
+                width: 18rem;
+           }
+        
         .button-back-txt{
             display: flex;
             position: relative;
             gap: 20px;
             top: 3rem;
+        }
+
+        .button-back-signup-txt{
+            display: flex;
+            gap: 20px;
+            top: 1rem;
+            color:white ;
+            position: relative;
         }
     
         .Login-txt h1{
@@ -295,8 +368,20 @@
             display: flex;
             align-items: center;
         }
+
+        .SignUp-txt h1{
+            position: absolute;
+            font-size: 25px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            color: white;
+
+        }
+
         .login-welcome-page{
             color: #050505;
+            
         }
     
         .login-welcome-page h1 {
@@ -310,8 +395,25 @@
             margin-bottom: 0.8rem;
             font-weight: bold;
         }
-    
-    
+
+        .signup-welcome-page{
+            color: #050505;
+            position: relative;
+        
+        }
+
+        .signup-welcome-page h1{
+            font-size: 2rem;
+            margin-bottom: 0.5rem;
+            font-weight: bold;
+        }
+
+        .signup-welcome-page p{
+            font-size: 1rem;
+            margin-bottom: 0.8rem;
+            font-weight: bold;
+        }
+       
         .image-container-login {
             position: relative;
             margin: 50px 50px;
@@ -341,10 +443,6 @@
             border-radius: 50px;
         }
     
-        .signup-body, .login-body {
-        display: none;
-        }
-    
         .login-main-container, .signup-main-container {
             display: none;
         }
@@ -356,13 +454,17 @@
         .login-desktop-container .trackiconloginleft{
             display: none;
         }
+
+        .signup-desktop-container .trackiconloginleft{
+            display: none;
+        }
     
     
         }
     
-        @media(min-width: 1024px){
+        @media(min-width: 1024px) {
     
-            .login-desktop-container{
+            .login-desktop-container,.signup-desktop-container{
                 background-color: #17191f;
                 display: flex;
                 padding: 1rem;
@@ -373,14 +475,21 @@
                 max-width: 70rem;
                 max-height:70rem;
             } 
-        
+
             .Login-desktop-main-container{
-            max-width: 50rem;
-            width: 40%;
-            position: relative;
+                max-width: 50rem;
+                width: 40%;
+                position: relative;
+            }
+
+            .SignUp-desktop-main-container{
+                max-width: 50rem;
+                width: 40%;
+                position: relative;
+                bottom: 5rem;    
             }
         
-            .Login-form-desktop{
+            .Login-form-desktop, .SignUp-form-desktop{
                 display: flex;
                 position: relative;
                 flex-direction: column;
@@ -391,21 +500,24 @@
             }
         
             .button-back-txt{
-                display: flex;
-                position: relative;
-                gap: 20px;
                 top: 3rem;
+            }
+
+            .button-back-signup-txt{
+                color:rgb(255, 253, 253) ;
+                top: 5.5rem; 
             }
         
             .Login-txt h1{
-                position: absolute;
-                font-size: 25px;
-                text-align: center;
-                display: flex;
-                align-items: center;
+                font-size: 34px;
             }
+
+            .SignUp-txt h1{
+                color: white;
+            }
+
             .login-welcome-page{
-                color: #050505;
+                color: #000000;
             }
         
             .login-welcome-page h1 {
@@ -451,9 +563,6 @@
                 border-radius: 50px;
             }
         
-            .signup-body, .login-body {
-            display: none;
-            }
         
             .login-main-container, .signup-main-container {
                 display: none;
@@ -479,15 +588,15 @@
                 position: relative;
                 display:block;
             }
-    
-            .login-desktop-container {  
-                display: flex;
-                color: white;
-                padding: 1rem;
-                justify-content: space-between;
+
+            .super-main-container .signup-welcome-page{
+                width: 100%;
+                height: 60%;
                 position: relative;
+                display:block;
             }
-            
+    
+        
             .image-container-login .motorbg-login {
                 position: absolute;
                 width: 18rem;
@@ -525,6 +634,25 @@
                 font-size: 1rem;
                 font-weight:650;
             }
+
+            .signup-welcome-page{
+                color: #050505;
+                position: relative;
+            
+            }
+    
+            .signup-welcome-page h1{
+                font-size: 2rem;
+                margin-bottom: 0.5rem;
+                font-weight: bold;
+            }
+    
+            .signup-welcome-page p{
+                font-size: 1rem;
+                margin-bottom: 0.8rem;
+                font-weight: bold;
+            }
+           
             
             .Login-desktop-main-container .trackiconlogin {
                 position: absolute;
@@ -540,9 +668,24 @@
                 top: 20rem;
                 right: 15rem;
             }
+
+            .SignUp-desktop-main-container .trackiconlogin {
+                position: absolute;
+                width: 75%;
+                bottom: 19rem;
+                left: 13rem;
+            }
+
+            .signup-desktop-container .trackiconloginleft{
+                position: absolute;
+                width: 70%;
+                transform: scaleX(-1);
+                top: 20rem;
+                right: 15rem;
+            }
         }
     
-        @media(min-width:2000px ) {
+        @media(min-width: 2560px) {
             .super-main-container{
                 position: relative;
                 text-align: center;
@@ -557,24 +700,42 @@
                 height: 60%;
                 position: relative;
                 display:block;
-            
+            }
+
+            .super-main-container .signup-welcome-page{
+                width: 100%;
+                height: 60%;
+                position: relative;
+                display:block;
             }
     
-            .login-welcome-page h1 {
+           .login-welcome-page h1 {
+                font-size: 4rem;
+                margin-bottom: 0.8rem;
+                font-weight: bold;
+            }
+
+            .signup-welcome-page h1{
                 font-size: 4rem;
                 margin-bottom: 0.8rem;
                 font-weight: bold;
             }
     
-            .login-welcome-page p {
+           .login-welcome-page p {
+                font-size: 1.7rem;
+                margin-bottom: 0.8rem;
+                font-weight: bold;
+            }
+
+            .signup-welcome-page p{
                 font-size: 1.7rem;
                 margin-bottom: 0.8rem;
                 font-weight: bold;
             }
     
-            .login-desktop-container {
-                width: 90rem;
-                height: 60rem;
+            .login-desktop-container, .signup-desktop-container {
+                width: 70rem;
+                height: 50rem;
                 max-width: 90rem;
                 max-height:60rem;
                 background-color: #1A1B28;
@@ -587,6 +748,15 @@
                 position: relative;
                 text-align: center;
                 align-items: center;
+            }
+
+            .SignUp-desktop-main-container{
+                max-width: 50rem;
+                width: 45%;
+                position: relative;
+                text-align: center;
+                align-items: center;
+                bottom: 5rem;    
             }
             
             .image-container-login {
@@ -616,7 +786,7 @@
                 position: absolute;
                 width:26%; /* Adjust to fill the container */
                 height: 26%;
-                bottom: 37rem;
+                bottom: 30rem;
                 left: 5px;
                 border-radius: 50px;
             }
@@ -642,7 +812,7 @@
                 gap: 20px;
             }
     
-            .Login-form-desktop{
+            .Login-form-desktop, .SignUp-form-desktop{
                 display: flex;
                 position: relative;
                 flex-direction: column;
@@ -684,16 +854,35 @@
             .Login-desktop-main-container .trackiconlogin {
                 position: absolute;
                 width: 70%;
-                bottom: 45rem;
-                left: 28rem;
+                bottom: 40rem;
+                left: 22rem;
             }
     
             .login-desktop-container .trackiconloginleft{
                 position: absolute;
                 width: 60%;
                 transform: scaleX(-1);
-                top: 40rem;
-                right: 35rem;
+                top: 35rem;
+                right: 29rem;
+            }
+
+            .SignUp-desktop-main-container .trackiconlogin {
+                position: absolute;
+                width: 70%;
+                bottom: 36rem;
+                left: 22rem;
+            }
+
+            .signup-desktop-container .trackiconloginleft{
+                position: absolute;
+                width: 60%;
+                transform: scaleX(-1);
+                top: 35rem;
+                right: 29rem;
+            }
+
+            .login-main-container, .signup-main-container {
+                display: none;
             }
     
             
