--- a/frontend/src/Pages/MonitoringPage/Monitor.css
+++ b/frontend/src/Pages/MonitoringPage/Monitor.css
@@ -29,6 +29,8 @@
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    font-weight: bold;
+    z-index: 100;
 }
 .profile-icon-container {
     display: none;
